--- a/Interface/static/css/home.css
+++ b/Interface/static/css/home.css
@@ -11,6 +11,8 @@
 
 form{
     /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
     width: 60%;
     margin-top: 0%;
     margin-right: auto;
@@ -25,7 +27,6 @@ form{
     height: 50px;
     width: 100%;
     overflow: hidden;
-    background-color: #173F5F;
 }
 .search-text{
     flex-grow: 9;
@@ -40,6 +41,17 @@ form{
     outline: 0;
 }
 
+.cl-switch{
+    text-align: center;
+    margin-bottom: 20px;
+    color: white;
+    font-size: 20pt;
+}
+.search-type{
+    width: 10px;
+}
+
+
 button[type=submit]{
     border-style: none;
     flex-grow: 1;
@@ -48,8 +60,6 @@ button[type=submit]{
 }
 
 .suggestions{
-
-    background-color: #20639B;
     box-sizing: border-box;
     width: 100%;
     position: relative;
@@ -83,7 +93,6 @@ button[type=submit]{
     margin: 10px auto;
     width: 100%;
     text-align: center;
-
 }
 
 .voice-icon{
@@ -102,3 +111,4 @@ button[type=submit]{
 .working{
     color: #3CAEA3;
 }
+
