--- a/Interface/static/css/results.css
+++ b/Interface/static/css/results.css
@@ -7,6 +7,7 @@
     font-size: 15pt;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 20px;
+    max-width: 800px;
 }
 
 .result-title{
